--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="label_email" translatable="false">mintic@2022.com</string>
     <string name="label_sign_out">Sign Out</string>
 
-
+    <!--Loremp -->
+    <string name="text_loremIpsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
     <!-- TODO: Blank fragment -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 
